--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <header class="header">
         <div class="header-container">
             <div class="header-top">
-                <a href="" class="header-logo"><img src="./img/header/header-logo.svg" alt="" class="header-logo"></a>
+                <a href="" class="header-logo"><img src="./img/header/header-logo.svg" alt="header logo" class="header-logo"></a>
                 <nav class="navbar">
-                    <button class="header-hmgr"><img src="./img/header/hamburger.svg" alt=""></button>
+                    <button class="header-hmgr"><img src="./img/header/hamburger.svg" alt="hamburger icon"></button>
 
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#" class="hoverMain nav-link">» Проекты и кейсы</a></li>
@@ -108,11 +108,11 @@
     <div class="hamburger-bar">
         <div class="hamburgerBarContainer">
             <div class="hamburger_top">
-                <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt=""
+                <a href="" class="hamburger-logo"><img src="./img/header/header-logo.svg" alt="hamburger logo"
                         class="hamburger-logo-img"></a>
 
                 <button class="exit-btn">
-                    <img src="./img/header/exit-img.svg" alt="" class="exit-img">
+                    <img src="./img/header/exit-img.svg" alt="close icon" class="exit-img">
                 </button>
             </div>
             <ul class="hamburger-list">
@@ -288,7 +288,7 @@
             <h1 class="yandex-title">Yandex.Cloud & <span class="yandex-title-span"> Fevlake</span></h1>
             <div class="yandex-information">
                 <div class="yandex-profile">
-                    <img src="./img/yandex/yandex-face.png" alt="" class="yandex-glavniy">
+                    <img src="./img/yandex/yandex-face.png" alt="face" class="yandex-glavniy">
                     <div class="yandex-profile-about">
                         <p class="yandex-profile-name">Имя Фамилия</p>
                         <p class="yandex-profile-information">“Цитата автора будет прямо здесь”</p>
@@ -297,34 +297,33 @@
                 <div class="yandex-texts">
                     <div class="yandex-texts-text">
                         <span class="yandex-texts-span">
-                            <img src="" alt="">
                         </span>
                         <p>Вместе с Yandex.Cloud развиваем сообщество инженеров и помогаем переезжать в облака с
                             собственных серверов</p>
                     </div>
                     <div class="yandex-texts-text">
                         <span class="yandex-texts-span">
-                            <img src="./img/yandex/yandex-right-icon.svg" alt="">
+                            <img src="./img/yandex/yandex-right-icon.svg" alt="icon">
                         </span>
                         <p>В <span class="yandex-text-span"> 2018 </span> стали партнерами <br class="yandex-br">
                             Yandex.Cloud</p>
                     </div>
                     <div class="yandex-texts-text">
                         <span class="yandex-texts-span">
-                            <img src="./img/yandex/yandex-right-icon.svg" alt="">
+                            <img src="./img/yandex/yandex-right-icon.svg" alt="icon">
                         </span>
                         <p>В <span class="yandex-text-span"> 2020 </span> запустили YouTube-практикум «Принимаем 10 000
                             ивентов в секунду в Yandex.Cloud», который посетили 6 000 инженеров</p>
                     </div>
                     <div class="yandex-texts-text">
                         <span class="yandex-texts-span">
-                            <img src="./img/yandex/yandex-right-icon.svg" alt="">
+                            <img src="./img/yandex/yandex-right-icon.svg" alt="icon">
                         </span>
                         <p>В <span class="yandex-text-span"> 2021 </span> запустили программу Kubernetes x Yandex.Cloud
                             для партнеров облака</p>
                     </div>
                     <div class="yandex-profile">
-                        <img src="./img/yandex/yandex-face.png" alt="" class="yandex-glavniy">
+                        <img src="./img/yandex/yandex-face.png" alt="face" class="yandex-glavniy">
                         <div class="yandex-profile-about">
                             <p class="yandex-profile-name">Имя Фамилия</p>
                             <p class="yandex-profile-information">“Цитата автора будет прямо здесь”</p>
@@ -348,10 +347,10 @@
 
     <!-- komanda start -->
     <section class="komanda">
-        <img src="./img/komanda/komanda-bg.svg" alt="" class="komanda-img1">
-        <img src="./img/komanda/komanda-bg2.svg" alt="" class="komanda-img2">
-        <img src="./img/komanda/team-image2.svg" alt="" class="komanda-img3">
-        <img src="./img/komanda/team-mobile.svg" alt="" class="komanda-img4">
+        <img src="./img/komanda/komanda-bg.svg" alt="Team" class="komanda-img1">
+        <img src="./img/komanda/komanda-bg2.svg" alt="Team" class="komanda-img2">
+        <img src="./img/komanda/team-image2.svg" alt="Team" class="komanda-img3">
+        <img src="./img/komanda/team-mobile.svg" alt="Team" class="komanda-img4">
         <div class="komanda-container">
             <div class="komanda-top">
                 <h1 class="komanda-title">Команда <span class="komanda-title-span">Fevlake</span></h1>
@@ -373,7 +372,7 @@
                     </p>
                     <p class="komanda-text3">Илья Федичкин и Василий Озеров, основатели Fevlake</p>
                 </div>
-                <img src="./img/komanda/down-arrow.svg" alt="" class="komanda-down-arrow">
+                <img src="./img/komanda/down-arrow.svg" alt="down arrow" class="komanda-down-arrow">
             </div>
             <div class="komanda-bottom">
                 <div class="komanda-proekt">
@@ -381,22 +380,22 @@
                         <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
                         <div class="komanda-profesi-cards">
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                                <img src="./img/komanda/card-mini-bg6.svg" alt="card bg" style="width: 44px;">
                             </div>
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
+                                <img src="./img/komanda/card-mini-bg5.svg" alt="card bg" style="width: 56px;">
                             </div>
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
+                                <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" style="width: 63px;">
                             </div>
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
+                                <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" style="width: 60px;">
                             </div>
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
+                                <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" style="width: 56px;">
                             </div>
                             <div class="komanda-profesi-card">
-                                <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                                <img src="./img/komanda/card-mini-bg6.svg" alt="card bg" style="width: 44px;">
                             </div>
                         </div>
                     </div>
@@ -411,13 +410,13 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg2.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg3.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg3.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -428,7 +427,7 @@
                                 </div>
                                 <div class="komanda-cards-cards" hidden>
                                     <div class="komanda-cards-card-min">
-                                        <img src="./img/komanda/card-mini-bg.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -439,10 +438,10 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -453,7 +452,7 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg3.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg3.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -466,13 +465,13 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg5.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg5.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -483,7 +482,7 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-min" hidden>
-                                        <img src="./img/komanda/card-mini-bg.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -494,10 +493,10 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg2.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -508,7 +507,7 @@
                                 </div>
                                 <div class="komanda-cards-cards">
                                     <div class="komanda-cards-card-mini">
-                                        <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                        <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                     </div>
                                 </div>
                             </div>
@@ -527,22 +526,22 @@
                     <h5 class="komanda-profesi-title">Мы — профессионалы</h5>
                     <div class="komanda-profesi-cards">
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                            <img src="./img/komanda/card-mini-bg6.svg" alt="card bg" style="width: 44px;">
                         </div>
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg5.svg" alt="" style="width: 56px;">
+                            <img src="./img/komanda/card-mini-bg5.svg" alt="card bg" style="width: 56px;">
                         </div>
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg2.svg" alt="" style="width: 63px;">
+                            <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" style="width: 63px;">
                         </div>
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg1.svg" alt="" style="width: 60px;">
+                            <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" style="width: 60px;">
                         </div>
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg4.svg" alt="" style="width: 56px;">
+                            <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" style="width: 56px;">
                         </div>
                         <div class="komanda-profesi-card">
-                            <img src="./img/komanda/card-mini-bg6.svg" alt="" style="width: 44px;">
+                            <img src="./img/komanda/card-mini-bg6.svg" alt="card bg" style="width: 44px;">
                         </div>
                     </div>
                 </div>
@@ -647,12 +646,12 @@
                 <div class="rebrain-row">
                     <h1 class="rebrain-title">Rebrain</h1>
                     <ul class="rebrain-list">
-                        <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="">
+                        <li class="rebrain-item"> <img class="rebrain-item-img" src="./img/rebrain/icon.svg" alt="rabain icon">
                             <p class="rebrain-item-text">Развиваем индустрию
                                 ИТ-инфраструктуры в России и за рубежом: проводим онлайн-практикумы и воркшопы для
                                 инженеров</p>
                         </li>
-                        <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg" alt="">
+                        <li class="rebrain-item2"> <img class="rebrain-item-img-2" src="./img/rebrain/icon.svg" alt="icon">
                             <p class="rebrain-item-text2"> С нами уже более <span class="rebrain-icon-span">40 000
                                 </span>инженеров, присоединяйтесь!</p>
                         </li>
