--- a/service.html
+++ b/service.html
@@ -228,7 +228,7 @@
                 <li class="nav-li"><a href="#" class="nav-a">#IT-интегратор</a></li>
             </ul>
             <h1 class="title">IT-инфраструктура для <br>
-                <span class="span">высоконагруженных</span> <br>
+                <span>высоконагруженных</span> <br>
                 веб-приложений
             </h1>
             <div class="hero-btn">
@@ -725,8 +725,8 @@
     <section class="komanda">
         <div class="komanda-container">
             <div class="teamLogoContainer">
-                <div class="teamLogoBox"><img src="./img/komanda/icons-2.svg" alt=""></div>
-                <div class="teamLogoBox"><img src="./img/komanda/icons-1.svg" alt=""></div>
+                <div class="teamLogoBox"><img src="./img/komanda/icons-2.svg" alt="icon"></div>
+                <div class="teamLogoBox"><img src="./img/komanda/icons-1.svg" alt="icon"></div>
             </div>
             <h1 class="komanda-title">Команда</h1>
             <p class="komanda-text1">IT-инфраструктуру для ваших приложений построит наша <span
@@ -741,13 +741,13 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg2.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg3.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg3.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -758,7 +758,7 @@
                             </div>
                             <div class="komanda-cards-cards" hidden>
                                 <div class="komanda-cards-card-min">
-                                    <img src="./img/komanda/card-mini-bg.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -769,10 +769,10 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -783,7 +783,7 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg3.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg3.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -796,13 +796,13 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg5.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg5.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -813,7 +813,7 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-min" hidden>
-                                    <img src="./img/komanda/card-mini-bg.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -824,10 +824,10 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg1.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg1.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg2.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg2.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -838,7 +838,7 @@
                             </div>
                             <div class="komanda-cards-cards">
                                 <div class="komanda-cards-card-mini">
-                                    <img src="./img/komanda/card-mini-bg4.svg" alt="" class="komanda-card-mini-img">
+                                    <img src="./img/komanda/card-mini-bg4.svg" alt="card bg" class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -1320,9 +1320,7 @@
                         d="M104.12 320.16L152 377L104.12 433.84L62.68 433.84L97.96 394.08L97.96 392.96L0.799992 392.96L0.799991 360.76L97.96 360.76L97.96 359.64L62.68 320.16L104.12 320.16ZM104.12 160.505L152 217.345L104.12 274.185L62.68 274.185L97.96 234.425L97.96 233.305L0.799985 233.305L0.799984 201.105L97.96 201.105L97.96 199.985L62.68 160.505L104.12 160.505ZM104.12 0.850594L152 57.6906L104.12 114.531L62.68 114.531L97.96 74.7706L97.96 73.6506L0.799978 73.6506L0.799977 41.4506L97.96 41.4506L97.96 40.3306L62.68 0.850596L104.12 0.850594Z"
                         fill="#F8F7F7" />
                 </svg>
-
                 <div class="swiper-pagination4 workLeft workLeftLgHidden"></div>
-         
                 <div class="workRight">
                     <div class="workRightWhite">
                         <div class="workBtns">
@@ -2444,21 +2442,21 @@
                 <div class="price-col">
                     <h2 class="price-col-title">Оценка стоимости проекта включает расходы:</h2>
                     <ul class="price-col-list">
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Оборудование и
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Оборудование и
                             лицензии
                         </li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Проектирование
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Проектирование
                             инфраструктуры</li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Планирование и
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Планирование и
                             контроль
                             внедрения</li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Работу команды
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Работу команды
                             инженеров
                         </li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Контроль качества
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Контроль качества
                         </li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Документирование</li>
-                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="">Поддержку 24/7</li>
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Документирование</li>
+                        <li class="price-col-item"><img src="./img/Service/price/arrow.svg" alt="arrow">Поддержку 24/7</li>
 
                     </ul>
                 </div>
@@ -2470,7 +2468,7 @@
                             <div class="price-row-item-top">
                                 <h4 class="price-row-item-top-title">Стоимость часов своей команды</h4>
                                 <button class="price-row-item-top-btn "><img src="./img/Service/price/icon.svg"
-                                        alt=""></button>
+                                        alt="arrow"></button>
                             </div>
                             <p class="price-row-item-top-text ">Опыт работы аутсорсеров во многих проектах часто шире
                                 собственного опыта команды. Внутренние команды часто выбирают то, с чем привычнее
@@ -2484,7 +2482,7 @@
                                 <h4 class="price-row-item-top-title">Скрытые издержки от внедрения неоптимальных
                                     архитектурных решений</h4>
                                 <button class="price-row-item-top-btn"><img src="./img/Service/price/icon.svg"
-                                        alt=""></button>
+                                        alt="arrow"></button>
                             </div>
                             <p class="price-row-item-top-text">Опыт работы аутсорсеров во многих проектах часто шире
                                 собственного опыта команды. Внутренние команды часто выбирают то, с чем привычнее
@@ -2497,7 +2495,7 @@
                             <div class="price-row-item-top">
                                 <h4 class="price-row-item-top-title">Vendor lock-in vs person lock-in</h4>
                                 <button class="price-row-item-top-btn"><img src="./img/Service/price/icon.svg"
-                                        alt=""></button>
+                                        alt="arrow"></button>
                             </div>
                             <p class="price-row-item-top-text">Опыт работы аутсорсеров во многих проектах часто шире
                                 собственного опыта команды. Внутренние команды часто выбирают то, с чем привычнее
@@ -2511,7 +2509,7 @@
                                 <h4 class="price-row-item-top-title">Скрытые расходы из-за более позднего выхода на <br>
                                     рынок и более долгой проверки бизнес-гипотез</h4>
                                 <button class="price-row-item-top-btn"><img src="./img/Service/price/icon.svg"
-                                        alt=""></button>
+                                        alt="arrow"></button>
                             </div>
                             <p class="price-row-item-top-text">Опыт работы аутсорсеров во многих проектах часто шире
                                 собственного опыта команды. Внутренние команды часто выбирают то, с чем привычнее
@@ -2524,7 +2522,7 @@
                             <div class="price-row-item-top">
                                 <h4 class="price-row-item-top-title">Управленческие издержки </h4>
                                 <button class="price-row-item-top-btn"><img src="./img/Service/price/icon.svg"
-                                        alt=""></button>
+                                        alt="arrow"></button>
                             </div>
                             <p class="price-row-item-top-text">Опыт работы аутсорсеров во многих проектах часто шире
                                 собственного опыта команды. Внутренние команды часто выбирают то, с чем привычнее
