--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
 
     <!-- komanda start -->
     <section class="komanda">
-        <img src="./img/komanda/komanda-bg.svg" alt="Team" class="komanda-img1">
-        <img src="./img/komanda/komanda-bg2.svg" alt="Team" class="komanda-img2">
-        <img src="./img/komanda/team-image2.svg" alt="Team" class="komanda-img3">
-        <img src="./img/komanda/team-mobile.svg" alt="Team" class="komanda-img4">
+        <img src="./img/komanda/teamDesktop.png" alt="Team" class="komanda-img1">
+        <img src="./img/komanda/teamNoutbook.png" alt="Team" class="komanda-img2">
+        <img src="./img/komanda/teamTablet.png" alt="Team" class="komanda-img3">
+        <img src="./img/komanda/teamMObile.png" alt="Team" class="komanda-img4">
         <div class="komanda-container">
             <div class="komanda-top">
                 <h1 class="komanda-title">Команда <span class="komanda-title-span">Fevlake</span></h1>
