--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                     </li>
                 </ul>
             </div>
-            <hr class="footer-line">
+            <div class="footer-line"></div>
             <div class="footer-row-2">
                 <div class="footer-appeal">
                     <div class="footer-appeal-box">
