--- a/service.html
+++ b/service.html
@@ -991,8 +991,6 @@
                             </div>
                             <div class="komanda-cards-cards" hidden>
                                 <div class="komanda-cards-card-min">
-                                    <img src="./img/komanda/card-mini-bg.svg" alt="card bg"
-                                        class="komanda-card-mini-img">
                                 </div>
                             </div>
                         </div>
@@ -2872,7 +2870,8 @@
                     </li>
                 </ul>
             </div>
-            <hr class="footer-line">
+            <div class="footer-line"></div>
+            
             <div class="footer-row-2">
                 <div class="footer-appeal">
                     <div class="footer-appeal-box">
